# NAMSC

./: .gitignore  CMakeLists.txt  NAMSC.sln  PNAMSC2.pptx  README.md  conan_catch2.props  conan_catch2__catch2.props  conan_catch2__catch2_release_x64.props  conan_catch2__catch2_vars_release_x64.props  conanbuildinfo.txt  conandeps.props  conanfile.txt  conaninfo.txt  graph_info.json  vcpkg.json
.github/: msbuild.yml
.github/workflows/: msbuild.yml
NAMSC_editor/: AssetTreeView.cpp  AssetTreeView.h  BasicNodeProperties.cpp  BasicNodeProperties.h  BasicNodeProperties.ui  CharacterTree.cpp  CharacterTree.h  CharacterTreeWidgetItem.h  ChoiceEventDialog.cpp  ChoiceEventDialog.h  ChoiceEventProperties.cpp  ChoiceEventProperties.h  ChoiceEventProperties.ui  ChoiceItemModel.cpp  ChoiceItemModel.h  CollapseButton.h  CustomQGraphicsView.cpp  CustomQGraphicsView.h  CustomSortFilterProxyModel.cpp  CustomSortFilterProxyModel.h  DialogEventProperties.cpp  DialogEventProperties.h  DialogItemModel.cpp  DialogItemModel.h  EventTreeItem.cpp  EventTreeItem.h  EventTreeItemModel.cpp  EventTreeItemModel.h  GraphArrow.cpp  GraphArrow.h  GraphConnectionPoint.cpp  GraphConnectionPoint.h  GraphNode.cpp  GraphNode.h  GraphNodeBody.cpp  GraphNodeBody.h  GraphNodePropertiesPack.cpp  GraphNodePropertiesPack.h  GraphView.cpp  GraphView.h  (+46 more)
NAMSC_editor/game/Characters/: disagree closed eyes  kot  mad smile  normal  sad smile  smile closed eyes  thinking
NAMSC_editor/game/Graph/: graph
NAMSC_editor/game/Objects/: bbg  bbgg  classroom  hold it!  jump  juump  pies
NAMSC_editor/game/Scenes/: Lose  Scene 2  bad ending  correct aslr  good ending  idk aslr  introduction  move to classroom  point of start  quiz 1  start
NAMSC_editor2/: GraphView.cpp  GraphView.h  MainEditorWindow.cpp  MainEditorWindow.h  MainEditorWindow.qrc  MainEditorWindow.ui  NAMSC_editor2.rc  NAMSC_editor2.vcxproj  NAMSC_editor2.vcxproj.filters  SceneDataModel.cpp  SceneDataModel.h  main.cpp
NAMSC_engine/: LanguageSettingsWidget.cpp  LanguageSettingsWidget.h  LanguageSettingsWidget.ui  MainMenu.cpp  MainMenu.h  MainSettingsMenu.cpp  MainSettingsMenu.h  MainTextBox.cpp  MainTextBox.h  NAMSC_engine.cpp  NAMSC_engine.h  NAMSC_engine.rc  NAMSC_engine.ui  NAMSC_engine.vcxproj  NAMSC_engine.vcxproj.filters  QVNMenuButton.cpp  QVNMenuButton.h  ScreenModeSettingsWidget.cpp  ScreenModeSettingsWidget.h  ScreenModeSettingsWidget.ui  TextBox.cpp  TextBox.h  TextSpeedSettingsWidget.cpp  TextSpeedSettingsWidget.h  TextSpeedSettingsWidget.ui  VNButton.cpp  VNButton.h  VolumeSettingsWidget.cpp  VolumeSettingsWidget.h  VolumeSettingsWidget.ui  main.cpp  mainWindow.cpp  mainWindow.h  mainWindow.ui
NAMSC_engine/game/Characters/: aha  disagree open eyes  give up  provoke  sad  sad closed eyes  smile open eyes  white glasses
NAMSC_engine/game/Graph/: graph
NAMSC_engine/game/Objects/: black background  cls  gui edytor  jump bridge
NAMSC_engine/game/Scenes/: Credits  Monster Encounter  Win  gui randomization  introduction  move to classroom  point of program start  start
NAMSC_engine_test/: NAMSC_engine_test.vcxproj  NAMSC_engine_test.vcxproj.filters  tst_novel.cpp
NAMSC_lib/: Evaluator.cpp  Evaluators.cpp  Global.cpp  NAMSC_lib.vcxproj  NAMSC_lib.vcxproj.filters
NAMSC_lib/src/: Exceptions.cpp  Exceptions.h  Global.h  Helpers.cpp  Helpers.h  Serialization.cpp  Serialization.h
NAMSC_lib/src/Novel/: Evaluators.h  NovelReferals.cpp  RenPyTranslator.h  SceneComponent.cpp  SceneComponent.h
NAMSC_lib/src/Novel/Action/: Action.cpp  Action.h  ActionAll.h  ActionAnimAll.h  ActionAudio.cpp  ActionAudioErrorCheck.cpp  ActionAudioRun.cpp  ActionStatAll.h  ActionStats.cpp  ActionStatsRun.cpp  ActionVisitor.h  ActionVisual.cpp  ActionVisualAll.h  ActionVisualRun.cpp  ActionsAll.h
NAMSC_lib/src/Novel/Data/: Action.h  ActionAll.h  ActionAudioAll.h  ActionStatAll.h  Asset.cpp  Chapter.cpp  Chapter.h  Event.h  EventAll.h  Novel.cpp  Novel.h  NovelErrorCheck.cpp  NovelFlowInterface.h  NovelIO.cpp  NovelRun.cpp  Scene.h  (+5 more)
NAMSC_lib/src/Story/: Evaluators.h  RenPyTranslator.h
NAMSC_test/: NAMSC_serializationtest.cpp  NAMSC_test.vcxproj  NAMSC_test.vcxproj.filters  main.cpp
cmake/: CompilerWarnings.cmake  Modules.cmake  Sources.cmake  StandardSettings.cmake
conan/: BZip2-debug-x86_64-data.cmake  Boost-Target-debug.cmake  Boost-debug-x86_64-data.cmake  Boost-release-x86_64-data.cmake  BoostConfig.cmake  BoostConfigVersion.cmake  CMakePresets.json  Microsoft.GSL-Target-debug.cmake  Microsoft.GSL-Target-release.cmake  Microsoft.GSL-debug-x86_64-data.cmake  Microsoft.GSL-release-x86_64-data.cmake  Microsoft.GSLConfig.cmake  Microsoft.GSLTargets.cmake  conan_toolchain.cmake  conandeps_legacy.cmake  conanfile.txt  module-BZip2-Target-debug.cmake  module-BZip2-release-x86_64-data.cmake  module-ZLIB-debug-x86_64-data.cmake  module-ZLIB-release-x86_64-data.cmake
src/Editor/: AssetTreeView.cpp  AssetTreeView.h  BasicNodeProperties.cpp  BasicNodeProperties.h  BasicNodeProperties.ui  CharacterTree.cpp  CharacterTree.h  CharacterTreeWidgetItem.cpp  CharacterTreeWidgetItem.h  ChoiceEventDialog.h  ChoiceEventDialog.ui  ChoiceEventProperties.cpp  ChoiceEventProperties.h  ChoiceItemModel.cpp  ChoiceItemModel.h  CollapseButton.h  CustomSortFilterProxyModel.cpp  CustomSortFilterProxyModel.h  DialogEventProperties.cpp  DialogEventProperties.h  DialogEventProperties.ui  DialogItemModel.cpp  DialogItemModel.h  EventTreeItem.cpp  EventTreeItem.h  EventTreeItemModel.cpp  EventTreeItemModel.h  GraphArrow.cpp  GraphArrow.h  GraphConnectionPoint.cpp  GraphConnectionPoint.h  GraphNode.cpp  GraphNode.h  GraphNodeBody.cpp  GraphNodePropertiesPack.cpp  GraphView.cpp  GraphView.h  JumpEventProperties.cpp  JumpEventProperties.h  LineEditDelegate.cpp  (+25 more)
src/Engine/: ExampleEngine.cpp  ExampleEngine.h  NAMSC_engine.cpp  NAMSC_engine.h  NAMSC_engine.ui  QVNMenuButton.cpp  QVNMenuButton.h  main.cpp
src/pvnlib/: Evaluator.cpp  Exceptions.cpp  Exceptions.h  Helpers.cpp  Helpers.h  Serialization.cpp  Serialization.h
src/pvnlib/Novel/: RenPyTranslator.h  SceneComponent.cpp  SceneComponent.h
(+549 files in other folders)
